--- a/pages/home.html
+++ b/pages/home.html
@@ -2,7 +2,7 @@
   <div class="hero-content">
     <h1>Building Digital 2.0:<br>Where Data Has Origin and Systems Have A Digital Name</h1>
     <p>Transform from castle security to digital relationships powered by blockchain, trusted computing, and cryptographic proof</p>
-    <a href="#" class="btn">Explore Digital 2.0</a>
+    <a href="#technology" class="btn">Explore Digital 2.0</a>
   </div>
 </section>
 
@@ -101,6 +101,7 @@
   <div class="cta-content">
     <h2>Join the Digital 2.0 Revolution</h2>
     <p>The future is digital, and it's built on trust, verification, and provable integrity. Be part of the transformation that's redefining cybersecurity.</p>
-    <a href="#" class="btn btn-secondary">Contact Us</a>
+    <a href="#contact" class="btn">Contact Us</a>
+    <a href="#whitepaper" class="btn btn-secondary">Read Our White Paper</a>
   </div>
 </section>
