--- a/pages/token.html
+++ b/pages/token.html
@@ -155,7 +155,7 @@
   <div class="quantum-content">
     <h2>Quantum-Resistant Security</h2>
     <p>RvT ensures future-proof security by integrating with quantum-resistant cryptography and post-quantum attestation mechanisms.</p>
-    <a href="whitepaper.html#putting-rvt-to-work" class="btn btn-secondary">Read Technical Details</a>
+    <a href="#whitepaper.putting-rvt-to-work" class="btn btn-secondary">Read Technical Details</a>
   </div>
 </section>
 
@@ -165,7 +165,7 @@
     <div class="acquisition-card">
       <h3>Coming Soon</h3>
       <p>RvT tokens will be available through regulated offerings. Stay informed about token availability and join our community to receive updates.</p>
-      <a href="#" class="btn">Join Waitlist</a>
+      <a href="#contact" class="btn">Join Waitlist</a>
     </div>
   </div>
 </section>
