normalize styling wip

--- a/pages/about.html
+++ b/pages/about.html
@@ -1,18 +1,20 @@
-<section class="page-hero">
-  <h1>About Rivetz</h1>
-  <p>Pioneering the future of digital relationships with verifiable trust and provable cybersecurity</p>
+<section class="hero dark-tray">
+  <div class="hero-content">
+    <h1>About Rivetz</h1>
+    <p>Pioneering the future of digital relationships with verifiable trust and provable cybersecurity</p>
+  </div>
 </section>
 
-<section class="vision-section">
-  <div class="vision-content">
+<section class="section light-tray">
+  <div class="section-content full primary">
     <h2>Our Vision</h2>
     <p>We envision a digital future built on verifiable trust, where every interaction has provable origin and integrity. We're moving beyond physical relationships with digital infrastructure to create true digital relationships with digital infrastructure.</p>
     <p>Rivetz is leading the transition from reactive cybersecurity to proactive data integrity, where data, systems, and services have original, verifiable information that can be validated mathematically, not just assumed based on brand reputation.</p>
   </div>
 </section>
 
-<section class="journey-section">
-  <div class="journey-content">
+<section class="section">
+  <div class="section-content">
     <h2>Our Journey</h2>
     <div class="timeline">
       <div class="timeline-item">
@@ -22,7 +24,7 @@
         </div>
         <div class="timeline-date">2013</div>
       </div>
-
+      <div class="timeline-divider"></div>
       <div class="timeline-item">
         <div class="timeline-content">
           <h3>DOD Contracts & Samsung Partnership</h3>
@@ -30,7 +32,7 @@
         </div>
         <div class="timeline-date">2014-2016</div>
       </div>
-
+      <div class="timeline-divider"></div>
       <div class="timeline-item">
         <div class="timeline-content">
           <h3>Pioneering Token Sale</h3>
@@ -38,7 +40,7 @@
         </div>
         <div class="timeline-date">2017</div>
       </div>
-
+      <div class="timeline-divider"></div>
       <div class="timeline-item">
         <div class="timeline-content">
           <h3>Telefonica Partnership</h3>
@@ -46,7 +48,7 @@
         </div>
         <div class="timeline-date">2018</div>
       </div>
-
+      <div class="timeline-divider"></div>
       <div class="timeline-item">
         <div class="timeline-content">
           <h3>Legal Clarity & Relaunch</h3>
@@ -86,30 +88,30 @@
   </div>
 </section>
 
-<section class="values-section">
-  <div class="values-content">
+<section class="section primary-tray center">
+  <div class="section-content card">
     <h2>Our Core Values</h2>
-    <div class="values-grid">
-      <div class="value-card">
-        <div class="value-icon">🔒</div>
+    <div class="section-grid">
+      <div class="section-item">
+        <div class="section-item-icon">🔒</div>
         <h3>Trust Through Verification</h3>
         <p>We believe trust is earned through mathematical proof, not assumed through brand reputation.</p>
       </div>
 
-      <div class="value-card">
-        <div class="value-icon">🌐</div>
+      <div class="section-item">
+        <div class="section-item-icon">🌐</div>
         <h3>Digital-First Thinking</h3>
         <p>We design for a world of digital relationships, not physical infrastructure with digital add-ons.</p>
       </div>
 
-      <div class="value-card">
-        <div class="value-icon">🤝</div>
+      <div class="section-item">
+        <div class="section-item-icon">🤝</div>
         <h3>Collaborative Innovation</h3>
         <p>We build ecosystems and partnerships to realize the full potential of Digital 2.0.</p>
       </div>
 
-      <div class="value-card">
-        <div class="value-icon">⚡</div>
+      <div class="section-item">
+        <div class="section-item-icon">⚡</div>
         <h3>Proactive Security</h3>
         <p>We prevent security issues before they occur rather than react after the damage is done.</p>
       </div>
