--- a/pages/home.html
+++ b/pages/home.html
@@ -1,4 +1,4 @@
-<section class="hero">
+<section class="hero primary-tray">
   <div class="hero-content">
     <h1>Building Digital 2.0:<br>Where Data Has Origin and Systems Have A Digital Name</h1>
     <p>Transform from castle security to digital relationships powered by blockchain, trusted computing, and cryptographic proof</p>
@@ -6,34 +6,34 @@
   </div>
 </section>
 
-<section class="transformation-banner">
-  <div class="transformation-content">
+<section class="section dark-tray">
+  <div class="section-content full">
     <h2>The Digital Revolution Has Arrived</h2>
     <p>Rivetz is pioneering the transition from reactive cybersecurity to proactive data integrity. We're building a world where every digital interaction can be verified, and every system has a provable identity.</p>
   </div>
 </section>
 
-<section class="features">
-  <div class="features-content">
+<section class="section">
+  <div class="section-content block">
     <h2>The Foundation of Digital 2.0</h2>
-    <div class="feature-grid">
-      <div class="feature-card">
-        <div class="feature-icon">🔗</div>
+    <div class="section-grid">
+      <div class="section-item">
+        <div class="section-item-icon">🔗</div>
         <h3>Data with Origin</h3>
         <p>Every digital interaction backed by cryptographic proof. Know the source, quality, and authenticity of the data you rely on.</p>
       </div>
-      <div class="feature-card">
-        <div class="feature-icon">🛡️</div>
+      <div class="section-item">
+        <div class="section-item-icon">🛡️</div>
         <h3>Measured Systems</h3>
         <p>Hardware-backed attestation ensures systems operate as expected, providing real-time integrity validation.</p>
       </div>
-      <div class="feature-card">
-        <div class="feature-icon">📜</div>
+      <div class="section-item">
+        <div class="section-item-icon">📜</div>
         <h3>Decentralized Policy</h3>
         <p>Policies bound to keys, not connections. Achieve regulatory compliance without sacrificing privacy.</p>
       </div>
-      <div class="feature-card">
-        <div class="feature-icon">✉️</div>
+      <div class="section-item">
+        <div class="section-item-icon">✉️</div>
         <h3>Secure Instructions</h3>
         <p>Verified digital messaging where only measured devices can create and execute critical operations.</p>
       </div>
@@ -68,27 +68,27 @@
   </div>
 </section>
 
-<section class="use-cases">
-  <div class="use-cases-content">
+<section class="section">
+  <div class="section-content image-block">
     <h2>Digital 2.0 in Action</h2>
-    <div class="use-case-grid">
-      <div class="use-case-card">
-        <div class="use-case-img">🤖</div>
-        <div class="use-case-content">
+    <div class="section-grid">
+      <div class="section-item">
+        <div class="section-item-icon">🤖</div>
+        <div class="section-item-content">
           <h3>Certified AI Output</h3>
           <p>Ensure AI-generated content has verifiable origin and system state validation</p>
         </div>
       </div>
-      <div class="use-case-card">
-        <div class="use-case-img">💳</div>
-        <div class="use-case-content">
+      <div class="section-item">
+        <div class="section-item-icon">💳</div>
+        <div class="section-item-content">
           <h3>Secure Blockchain Wallets</h3>
           <p>Hardware-secured transactions with policy enforcement for compliant operations</p>
         </div>
       </div>
-      <div class="use-case-card">
-        <div class="use-case-img">💬</div>
-        <div class="use-case-content">
+      <div class="section-item">
+        <div class="section-item-icon">💬</div>
+        <div class="section-item-content">
           <h3>Verified Social Media</h3>
           <p>End the era of fake accounts with hardware-backed identity verification</p>
         </div>
