--- a/pages/solutions.html
+++ b/pages/solutions.html
@@ -15,7 +15,7 @@
         <li>Track and authenticate AI system state</li>
         <li>Link output directly to manufacturer with verifiable chain</li>
       </ul>
-      <a href="whitepaper.html#applications" class="btn">Learn More</a>
+      <a href="#whitepaper.applications" class="btn">Learn More</a>
     </div>
   </div>
 </section>
@@ -32,7 +32,24 @@
         <li>Evidence for peer-to-peer transactions</li>
         <li>Compliance verification with privacy</li>
       </ul>
-      <a href="#" class="btn">Explore Wallet Security</a>
+      <a href="#whitepaper.manifest" class="btn">Explore Wallet Security</a>
+    </div>
+  </div>
+</section>
+
+<section class="solution-section">
+  <div class="solution-content">
+    <div class="solution-visual">📊</div>
+    <div class="solution-text">
+      <h2>Data with Origin</h2>
+      <p>In Digital 2.0, every piece of data should have provable source and authenticity. Rivetz provides the infrastructure to ensure all digital assets carry verifiable origin credentials.</p>
+      <ul class="feature-list">
+        <li>Cryptographically signed data with tamper-proof audit trails</li>
+        <li>Validation of data creation environment and conditions</li>
+        <li>Immutable record of data provenance on blockchain</li>
+        <li>Real-time verification of source system integrity</li>
+      </ul>
+      <a href="#whitepaper.architecture" class="btn">Explore Data Origin</a>
     </div>
   </div>
 </section>
@@ -49,7 +66,7 @@
         <li>Maintain anonymous accounts with verified control</li>
         <li>Record controls on blockchain for global validation</li>
       </ul>
-      <a href="#" class="btn">View Social Solutions</a>
+      <a href="#whitepaper.applications" class="btn">View Social Solutions</a>
     </div>
   </div>
 </section>
@@ -66,7 +83,7 @@
         <li>Track device state throughout lifecycle</li>
         <li>Ensure manufactured data has known origin</li>
       </ul>
-      <a href="#" class="btn">Explore Device Security</a>
+      <a href="#whitepaper.architecture" class="btn">Explore Device Security</a>
     </div>
   </div>
 </section>
@@ -106,6 +123,6 @@
   <div class="cta-content">
     <h2>Ready to Implement Digital 2.0?</h2>
     <p>Contact our team to discuss how Rivetz solutions can transform your security infrastructure with provable cybersecurity controls.</p>
-    <a href="#" class="btn btn-secondary">Schedule a Consultation</a>
+    <a href="#contact" class="btn btn-secondary">Schedule a Consultation</a>
   </div>
 </section>
