--- a/pages/token.html
+++ b/pages/token.html
@@ -5,65 +5,37 @@
   </div>
 </section>
 
-<section class="token-utility-section">
-  <div class="token-utility-content">
-    <h2>Utility of RvT Token</h2>
-    <div class="utility-grid">
-      <div class="utility-card">
-        <div class="utility-icon">💼</div>
-        <h3>Device Allowances</h3>
-        <p>RvT enables devices to maintain small balances for automated operations, limiting potential losses through cybersecurity breaches.</p>
-        <ul class="utility-list">
-          <li>Subaccount model for owners</li>
-          <li>Controlled value distribution</li>
-          <li>Automated spending limits</li>
-        </ul>
-      </div>
 
-      <div class="utility-card">
-        <div class="utility-icon">⚖️</div>
-        <h3>Policy Enforcement</h3>
-        <p>Record and pay for compliance verification on blockchain with RvT transactions.</p>
-        <ul class="utility-list">
-          <li>Local and remote policy execution</li>
-          <li>Immutable compliance records</li>
-          <li>Third-party service integration</li>
-        </ul>
-      </div>
 
-      <div class="utility-card">
-        <div class="utility-icon">🔄</div>
-        <h3>Service Payments</h3>
-        <p>Direct payment for verification services and digital interactions.</p>
-        <ul class="utility-list">
-          <li>Geolocation attestation</li>
-          <li>Identity verification</li>
-          <li>System integrity checks</li>
-        </ul>
-      </div>
-
-      <div class="utility-card">
-        <div class="utility-icon">🔗</div>
-        <h3>Cross-Chain Operations</h3>
-        <p>Enable authority and verification across different blockchain infrastructures.</p>
-        <ul class="utility-list">
-          <li>Digital certificate authority</li>
-          <li>Multi-chain compatibility</li>
-          <li>Transaction attestation</li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</section>
-
-<section class="token-economics-section">
-  <div class="token-economics-content">
-    <h2>Token Economics</h2>
-    <div class="economics-grid">
-      <div class="economics-visual">
+<section class="token-details-section">
+  <div class="token-details-content">
+    <h2>Token Details</h2>
+    <div class="details-grid">
+      <div class="details-visual">
         <div class="token-circle">RvT</div>
       </div>
-      <div class="economics-text">
+      <div class="details-text">
+        <div class="token-specs">
+          <div class="token-spec-item">
+            <h4>Total Supply</h4>
+            <p>200,000,000 RvT</p>
+          </div>
+          <div class="token-spec-item">
+            <h4>Circulating Supply</h4>
+            <p>164,683,380 RvT</p>
+          </div>
+          <div class="token-spec-item">
+            <h4>Contract Address</h4>
+            <p class="address-text">0x3d1BA9be9f66B8ee101911bC36D3fB562eaC2244</p>
+	    <p>ERC-20</P
+            <a href="https://etherscan.io/token/0x3d1ba9be9f66b8ee101911bc36d3fb562eac2244" target="_blank" class="token-link">View on Etherscan</a>
+          </div>
+          <div class="token-spec-item">
+            <h4>DEX Platform</h4>
+            <p>Bancor.network</p>
+          </div>
+
+        </div>
         <h3>The Power of Utility Integration</h3>
         <p>RvT combines payment and operations into a single command, eliminating the traditional buy-then-checkout model.</p>
         <ul class="economics-list">
@@ -77,87 +49,8 @@
   </div>
 </section>
 
-<section class="token-use-cases-section">
-  <div class="token-use-cases-content">
-    <h2>RvT Token Use Cases</h2>
-    <div class="use-cases-grid">
-      <div class="use-case-card">
-        <div class="use-case-icon">🤖</div>
-        <h3>AI Output Certification</h3>
-        <p>Pay for and record AI output verification and system state attestation</p>
-      </div>
 
-      <div class="use-case-card">
-        <div class="use-case-icon">📱</div>
-        <h3>Device Authentication</h3>
-        <p>Enable devices to record available information on chains and share state</p>
-      </div>
 
-      <div class="use-case-card">
-        <div class="use-case-icon">🔐</div>
-        <h3>Wallet Operations</h3>
-        <p>Hardware-secured transactions with policy enforcement</p>
-      </div>
-
-      <div class="use-case-card">
-        <div class="use-case-icon">📊</div>
-        <h3>Compliance Recording</h3>
-        <p>Immutable logging of policy execution and verification</p>
-      </div>
-
-      <div class="use-case-card">
-        <div class="use-case-icon">💬</div>
-        <h3>Social Media Verification</h3>
-        <p>Account control and reputation management</p>
-      </div>
-
-      <div class="use-case-card">
-        <div class="use-case-icon">⚙️</div>
-        <h3>IoT Automation</h3>
-        <p>Machine-to-machine transactions with built-in verification</p>
-      </div>
-    </div>
-  </div>
-</section>
-
-<section class="integration-section">
-  <div class="integration-content">
-    <h2>Blockchain Integration</h2>
-    <div class="integration-grid">
-      <div class="integration-item">
-        <div class="integration-icon">⛓️</div>
-        <h3>Ethereum</h3>
-        <p>ERC-20 compatible</p>
-      </div>
-
-      <div class="integration-item">
-        <div class="integration-icon">🔗</div>
-        <h3>Bitcoin</h3>
-        <p>Cross-chain operations</p>
-      </div>
-
-      <div class="integration-item">
-        <div class="integration-icon">🌐</div>
-        <h3>DeFi Protocols</h3>
-        <p>Decentralized finance integration</p>
-      </div>
-
-      <div class="integration-item">
-        <div class="integration-icon">🔒</div>
-        <h3>Enterprise Chains</h3>
-        <p>Private blockchain support</p>
-      </div>
-    </div>
-  </div>
-</section>
-
-<section class="quantum-section">
-  <div class="quantum-content">
-    <h2>Quantum-Resistant Security</h2>
-    <p>RvT ensures future-proof security by integrating with quantum-resistant cryptography and post-quantum attestation mechanisms.</p>
-    <a href="whitepaper.html#putting-rvt-to-work" class="btn btn-secondary">Read Technical Details</a>
-  </div>
-</section>
 
 <section class="acquisition-section">
   <div class="acquisition-content">
@@ -165,7 +58,7 @@
     <div class="acquisition-card">
       <h3>Coming Soon</h3>
       <p>RvT tokens will be available through regulated offerings. Stay informed about token availability and join our community to receive updates.</p>
-      <a href="#" class="btn">Join Waitlist</a>
+      <a href="#contact" class="btn">Join Waitlist</a>
     </div>
   </div>
 </section>
