--- a/pages/resources.html
+++ b/pages/resources.html
@@ -8,15 +8,15 @@
     <!-- White Papers Section -->
     <div class="category-section">
       <div class="category-header">
-        <h2>White Papers</h2>
-        <p>In-depth technical documentation exploring the foundations of Digital 2.0 and Rivetz technology</p>
+        <h2>Rivetz Whitepaper 2.0</h2>
+        <p>The Foundations for Rivetz new vision of Digital 2.0</p>
       </div>
 
       <div class="resources-grid">
         <div class="resource-card">
           <div class="resource-image">📄</div>
           <div class="resource-content">
-            <span class="resource-tag">Technical Paper</span>
+            <span class="resource-tag">Digital 2.0 White Paper</span>
             <h3>Cybersecurity for Decentralized Systems</h3>
             <p>Comprehensive overview of Rivetz's approach to building Digital 2.0 infrastructure with provable cybersecurity controls</p>
             <a href="whitepaper.html" class="resource-link">Read Now</a>
@@ -29,7 +29,7 @@
             <span class="resource-tag">Architecture</span>
             <h3>The Manifest of Controls</h3>
             <p>Technical deep-dive into policy bound to keys and decentralized compliance mechanisms</p>
-            <a href="#" class="resource-link">Read More</a>
+            <a href="#" class="resource-link">Coming Soon!</a>
           </div>
         </div>
 
@@ -37,9 +37,9 @@
           <div class="resource-image">📃</div>
           <div class="resource-content">
             <span class="resource-tag">Economics</span>
-            <h3>RvT Token Economics</h3>
+            <h3>The Work Tokens Do</h3>
             <p>Explore the utility model and economic framework powering the Digital 2.0 ecosystem</p>
-            <a href="#" class="resource-link">Download PDF</a>
+            <a href="#" class="resource-link">Coming Soon</a>
           </div>
         </div>
       </div>
@@ -49,37 +49,37 @@
     <div class="category-section">
       <div class="category-header">
         <h2>Blog & Insights</h2>
-        <p>Latest thoughts, updates, and perspectives on cybersecurity, blockchain, and Digital 2.0 transformation</p>
+        <p>A few historical Rivetz blogs on cybersecurity, blockchain, and Digital 2.0 transformation</p>
       </div>
 
       <div class="resources-grid">
         <div class="resource-card">
           <div class="resource-image">✍️</div>
           <div class="resource-content">
-            <span class="resource-tag">Industry Analysis</span>
-            <h3>From Castle Security to Digital Relationships</h3>
-            <p>Why traditional cybersecurity models are failing and how Digital 2.0 provides the solution</p>
-            <a href="#" class="resource-link">Read Article</a>
+            <span class="resource-tag">from 2019</span>
+            <h3>Blockchain Identity & Cyber Security</h3>
+            <p>A new approach to identity</p>
+            <a href="https://medium.com/rivetz/blockchain-identity-cyber-security-84a80c26c1b3" class="resource-link">Read Article</a>
           </div>
         </div>
 
         <div class="resource-card">
           <div class="resource-image">🤖</div>
           <div class="resource-content">
-            <span class="resource-tag">AI & Security</span>
-            <h3>Certifying AI Output in the Age of Misinformation</h3>
-            <p>How hardware-backed attestation ensures authenticity of AI-generated content</p>
-            <a href="#" class="resource-link">Read Article</a>
+            <span class="resource-tag">Enterprise</span>
+            <h3>The Enterprise Need for Provable Cybersecurity Controls</h3>
+            <p>A new approach to assuring the origin of data</p>
+            <a href="https://medium.com/rivetz/the-enterprise-need-for-provable-cybersecurity-controls-4b125bc7b793" class="resource-link">Read Article</a>
           </div>
         </div>
 
         <div class="resource-card">
           <div class="resource-image">⚖️</div>
           <div class="resource-content">
-            <span class="resource-tag">Regulatory Compliance</span>
-            <h3>Decentralized Compliance: Beyond GDPR and CCPA</h3>
-            <p>Achieving regulatory compliance without sacrificing privacy in peer-to-peer transactions</p>
-            <a href="#" class="resource-link">Read Article</a>
+            <span class="resource-tag">Old Rivetz Videos</span>
+            <h3>The Rivetz Youtube channelA</h3>
+            <p>We Built Cool stuff!</p>
+            <a href="https://www.youtube.com/c/RivetzCorp" class="resource-link">YouTube</a>
           </div>
         </div>
       </div>
@@ -99,28 +99,28 @@
         <div class="developer-icon">⚙️</div>
         <h3>API Documentation</h3>
         <p>Complete reference for integrating with GAIN platform and RvT token utilities</p>
-        <a href="#" class="btn btn-outline">View Docs</a>
+        <a href="#" class="btn btn-outline">Coming Soon!</a>
       </div>
 
       <div class="developer-card">
         <div class="developer-icon">💻</div>
         <h3>SDK & Libraries</h3>
         <p>Software development kits for popular platforms and languages</p>
-        <a href="#" class="btn btn-outline">Download SDK</a>
+        <a href="#" class="btn btn-outline">Coming Soon!</a>
       </div>
 
       <div class="developer-card">
         <div class="developer-icon">🔍</div>
         <h3>Integration Guides</h3>
         <p>Step-by-step tutorials for implementing attestation and verification</p>
-        <a href="#" class="btn btn-outline">Get Started</a>
+        <a href="#" class="btn btn-outline">Coming Soon!</a>
       </div>
 
       <div class="developer-card">
         <div class="developer-icon">🌐</div>
         <h3>GitHub Repository</h3>
         <p>Open source tools and reference implementations</p>
-        <a href="#" class="btn btn-outline">View Repo</a>
+        <a href="https://Github.com/rivetz" class="btn btn-outline">View Repo</a>
       </div>
     </div>
   </div>
