--- a/pages/token.html
+++ b/pages/token.html
@@ -1,78 +1,9 @@
-<section class="token-hero">
-  <div class="token-hero-content">
+<section class="hero dark-tray">
+  <div class="hero-content">
     <h1>RvT Token</h1>
     <p>The utility token powering Digital 2.0 operations and economics</p>
   </div>
 </section>
-
-<!-- mjs-styling
-<section class="section light-tray">
-  <div class="section-content block">
-    <h2>Utility of RvT Token</h2>
-    <div class="section-grid">
-      <div class="section-item">
-        <div class="section-item-icon">💼</div>
-        <h3>Device Allowances</h3>
-        <p>RvT enables devices to maintain small balances for automated operations, limiting potential losses through cybersecurity breaches.</p>
-        <ul class="section-list">
-          <li>Subaccount model for owners</li>
-          <li>Controlled value distribution</li>
-          <li>Automated spending limits</li>
-        </ul>
-      </div>
-
-      <div class="section-item">
-        <div class="section-item-icon">⚖️</div>
-        <h3>Policy Enforcement</h3>
-        <p>Record and pay for compliance verification on blockchain with RvT transactions.</p>
-        <ul class="section-list">
-          <li>Local and remote policy execution</li>
-          <li>Immutable compliance records</li>
-          <li>Third-party service integration</li>
-        </ul>
-      </div>
-
-      <div class="section-item">
-        <div class="section-item-icon">🔄</div>
-        <h3>Service Payments</h3>
-        <p>Direct payment for verification services and digital interactions.</p>
-        <ul class="section-list">
-          <li>Geolocation attestation</li>
-          <li>Identity verification</li>
-          <li>System integrity checks</li>
-        </ul>
-      </div>
-
-      <div class="section-item">
-        <div class="section-item-icon">🔗</div>
-        <h3>Cross-Chain Operations</h3>
-        <p>Enable authority and verification across different blockchain infrastructures.</p>
-        <ul class="section-list">
-          <li>Digital certificate authority</li>
-          <li>Multi-chain compatibility</li>
-          <li>Transaction attestation</li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</section>
-
-<section class="section dark-tray">
-  <div class="section-content full">
-    <h2>Token Economics</h2>
-    <div class="section-grid">
-      <div class="economics-visual">
-        <div class="token-circle">RvT</div>
-      </div>
-      <h3>The Power of Utility Integration</h3>
-      <p>RvT combines payment and operations into a single command, eliminating the traditional buy-then-checkout model.</p>
-      <ul class="section-list">
-        <li>Seamless microtransactions for policy enforcement</li>
-        <li>Store of value with operational utility</li>
-        <li>Digital relationship enablement</li>
-        <li>Decentralized compliance economics</li>
-      </ul>
--->
 
 <section class="token-details-section">
   <div class="token-details-content">
@@ -112,113 +43,6 @@
           <li>Decentralized compliance economics</li>
         </ul>
       </div>
-    </div>
-  </div>
-</section>
-
-<!-- mjs-styling
-<section class="section">
-  <div class="section-content image-block">
-    <h2>RvT Token Use Cases</h2>
-    <div class="section-grid">
-      <div class="section-item">
-        <div class="section-icon">🤖</div>
-        <div class="section-item-content">
-          <h3>AI Output Certification</h3>
-          <p>Pay for and record AI output verification and system state attestation</p>
-        </div>
-      </div>
-
-      <div class="section-item">
-        <div class="section-icon">📱</div>
-        <div class="section-item-content">
-          <h3>Device Authentication</h3>
-          <p>Enable devices to record available information on chains and share state</p>
-        </div>
-      </div>
-
-      <div class="section-item">
-        <div class="section-icon">🔐</div>
-        <div class="section-item-content">
-          <h3>Wallet Operations</h3>
-          <p>Hardware-secured transactions with policy enforcement</p>
-        </div>
-      </div>
-
-      <div class="section-item">
-        <div class="section-icon">📊</div>
-        <div class="section-item-content">
-          <h3>Compliance Recording</h3>
-          <p>Immutable logging of policy execution and verification</p>
-        </div>
-      </div>
-
-      <div class="section-item">
-        <div class="section-icon">💬</div>
-        <div class="section-item-content">
-          <h3>Social Media Verification</h3>
-          <p>Account control and reputation management</p>
-        </div>
-      </div>
-
-      <div class="section-item">
-        <div class="section-icon">⚙️</div>
-        <div class="section-item-content">
-          <h3>IoT Automation</h3>
-          <p>Machine-to-machine transactions with built-in verification</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<section class="section dark-tray center">
-  <div class="section-content card">
-    <h2>Blockchain Integration</h2>
-    <div class="section-grid">
-      <div class="section-item">
-        <div class="section-item-icon">⛓️</div>
-        <h3>Ethereum</h3>
-        <p>ERC-20 compatible</p>
-      </div>
-
-      <div class="section-item actionable">
-        <div class="section-item-icon">🔗</div>
-        <h3>Bitcoin</h3>
-        <p>Cross-chain operations</p>
-      </div>
-
-      <div class="section-item actionable">
-        <div class="section-item-icon">🌐</div>
-        <h3>DeFi Protocols</h3>
-        <p>Decentralized finance integration</p>
-      </div>
-
-      <div class="section-item">
-        <div class="section-item-icon">🔒</div>
-        <h3>Enterprise Chains</h3>
-        <p>Private blockchain support</p>
-      </div>
-    </div>
-  </div>
-</section>
-
-<section class="section primary-tray">
-  <div class="section-content full">
-    <h2>Quantum-Resistant Security</h2>
-    <p>RvT ensures future-proof security by integrating with quantum-resistant cryptography and post-quantum attestation mechanisms.</p>
-    <a href="#whitepaper.putting-rvt-to-work" class="btn btn-secondary">Read Technical Details</a>
-  </div>
-</section>
--->
-
-<section class="acquisition-section">
-  <div class="acquisition-content">
-    <h2>RvT Token Availability</h2>
-    <div class="acquisition-card">
-      <h3>Coming Soon</h3>
-      <p>RvT tokens will be available through regulated offerings. Stay informed about token availability and join our community to receive updates.</p>
-      <a href="#contact" class="btn">Join Waitlist</a>
     </div>
   </div>
 </section>
